# GrantPilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_embedding_to_chunks.py  0003_add_auth.py
backend/app/: main.py
backend/app/api/: analysis.py  auth.py  deps.py  documents.py  organizations.py  projects.py
backend/app/core/: config.py  database.py  llm.py  rate_limit.py  security.py
backend/app/models/: analysis.py  base.py  chunk.py  document.py  organization.py  project.py  user.py
backend/app/schemas/: analysis.py  auth.py  document.py  organization.py  project.py
backend/app/services/: analysis_service.py  application_drafter.py  document_parser.py  document_service.py  embedding_service.py  evidence_matcher.py  grant_extractor.py  organization_service.py  project_service.py  readiness_scorer.py  report_generator.py  seed.py  storage_service.py  user_service.py
backend/tests/: conftest.py  test_analysis.py  test_auth.py  test_dashboard.py  test_delete_edit.py  test_document_parser.py  test_documents.py  test_organizations.py  test_pipeline.py  test_project_deletion.py  test_projects.py  test_report.py  test_upload_analyze_flow.py
docs/: AI_PIPELINE.md  API_CONTRACTS.md  ARCHITECTURE.md  DATA_MODEL.md  (+7 more)
mcp/grant-context-mcp/: .env.example  README.md  claude_desktop_config.json  pyproject.toml  server.py
mcp/grant-context-mcp/tests/: test_tools.py
(+53 files in other folders)
