[project]
name = "grant-context-mcp"
version = "0.1.0"
description = "MCP server exposing GrantPilot grant-analysis tools to Claude agents"
requires-python = ">=3.11"
dependencies = [
    # MCP SDK
    "mcp[cli]>=1.0.0",
    # Backend deps (shared with backend/pyproject.toml)
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "anthropic>=0.28.0",
    "pymupdf>=1.24.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
grant-context-mcp = "server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
